ch10/ch10-documentation/config-macro-usage/tests/fails/unknown_config_file.stderr
error: could not find config with path ./fake.yaml
 --> tests/fails/unknown_config_file.rs:3:1
  |
3 | config!(path = "./fake.yaml");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `config` (in Nightly builds, run with -Z macro-backtrace for more info)
